--- a/index.html
+++ b/index.html
@@ -2,112 +2,159 @@
 <html lang="en">
 
 <head>
-    <!-- Character encoding and viewport settings for mobile responsiveness -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Meta tags for description, keywords, and author -->
-    <meta name="description" content="Home page to something...Just don't know what yet!">
-    <!-- Page title -->
-    <title>GoMYOR</title>
-    <!-- Link to external CSS -->
-    <link rel="stylesheet" href="myor/css/main.css">
-    <!-- Font Awesome for icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <!-- Favicon links -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/favicon/android-chrome-192x192.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GoMyor</title>
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/main.js" defer></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <!-- Header Section -->
-    <header>
-        <!-- Navigation bar with links to sections -->
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- Main Content Section -->
-    <main>
-        <section id="about">
-            <div class="highlight-box">
-                <!-- Display a heading -->
-                <h3>Riding Good Vibes into the Tech Universe</h3>
-                <!-- About Section -->
-                <section id="introduction">
-                    <p>
-                        I'm just a chill guy, trying to ride the cosmic <br>
-                        wave of good vibes into my own reality.<br><br>
-                        Somewhere between binge-watching One Piece and trying to <br>
-                        convince my cats that I'm in charge (spoiler: I'm not), <br>
-                        I discovered my passion for coding. <br><br>
-                        Now I'm gearing up to crash-land into the tech industry <br>
-                        as an aspiring developer!<br>
-                        I really look forward to creating some cool stuff and <br>
-                        meeting some like-minded people.<br><br>
-                        Until then, I'm just cruising through, feeding off positive energy, <br>
-                        learning, and having a good time.<br><br>
-                    </p>
-                </section>
-            </div>
-        </section>
-    </main>
-    <!-- Footer Section -->
-    <footer id="contact">
-        <!-- Contact Information -->
-        <div class="footer-section contact-info">
-            <div class="contact-name">First Last</div>
-            <p>Email: <a href="mailto:contact@gomyor.com">contact@email.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1-234-567-8910</a></p>
-            <!-- Social media links -->
-            <div class="social-icons">
-                <a href="#" target="_blank"><i class="fab fa-discord"></i>Discord</a>
-                <a href="#" target="_blank"><i class="fab fa-github"></i>Github</a>
-            </div>
+  <div class="top-row">
+    <button class="circle">D</button>
+    <div class="bar"></div>
+    <div class="gap"></div>
+    <button class="oval">Home</button>
+    <button class="oval">About</button>
+    <button class="oval">Contact</button>
+    <button class="oval">-</button>
+    <button class="oval">-</button>
+    <button class="square">-</button>
+  </div>
+
+  <div id="home" class="section section-header">Riding Good Vibes into the Tech Universe</div>
+
+  <div class="row-3">
+    <div class="section section-welcome">
+      <h1>Welcome to my site!</h1>
+
+      The names Martin Mitchell, and I'm<br>
+      a developer in the making!<br><br>
+
+      Somewhere between binge-watching One Piece<br>
+      and trying to convince my cats that<br>
+      I'm in charge (spoiler: I'm not), that's where<br>
+      I discovered my passion for coding.<br><br>
+
+      Since then I've been chasing down a dream<br>
+      and trying to make it my own reality.<br>
+      Or as I sometimes say...<br>
+      I'm just a guy trying to ride a cosmic<br>
+      wave of good vibes into his<br>
+      own reality!<br><br>
+    </div>
+    <div class="section section-image">
+      <p>Problem Solver | Code Enthusiast<br><br>
+        <img src="images/the-guy.jpg" alt="The Guy"><br>
+        "Insert picture of myself here eventually."
+      </p>
+    </div>
+    <div class="section section-skills">
+      <h1>Skills</h1>
+
+      <ul>
+        <li>C#</li>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Python</li>
+        <li>SQL</li>
+        <li>.Net</li>
+        <li>Bootstrap</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Visual Studio</li>
+        <li>VS Code</li>
+        <li>Teamwork</li>
+        <li>Communication</li>
+        <li>Adaptability</li>
+        <li>Time Management</li>
+        <li>Positive Attitude</li>
+        <li>Problem Solving</li>
+      </ul>
+
+      <h2>Education</h2>
+      <p>TheTechAcademy - C# .NET Bootcamp</p>
+    </div>
+  </div>
+
+  <div id="about" class="section section-about">
+    <h1>Building My Future</h1>
+    <p>
+      For awhile I was studying on my own, mostly using VS to write basic console applications<br>
+      in C#. It was fun and I enjoyed it, but I wanted to learn more. I wanted to be able<br>
+      to create something with my brother one day. I decided to broaden my<br>
+      horizon and seek out a more formal means of education. <br><br>
+
+      I recently finished TheTechAcademy's C# .NET bootcamp. TheTechAcademy was a great skillset builder,<br>
+      it gave me a solid foundation in C# .NET, while exposing me to other languages and<br>
+      concepts. With that experience I also realised, I just enjoy all coding.<br>
+      Front-end, back-end, full-stack...<br>
+      It's all fun!<br><br>
+
+      I'm excited to see where this journey takes me, and I eagerly await<br>
+      my chance to dive into the tech industry and<br>
+      create some cool stuff.<br><br>
+
+      Until then, I'm just cruising through, feeding<br>
+      off the positive energy, learning,<br>
+      and having a good time.<br>
+    </p>
+  </div>
+
+  <footer id="contact">
+    <!-- Contact Information -->
+    <div class="footer-section contact-info">
+      <div class="contact-name">Martin Mitchell</div>
+      <p>Email: <a href="mailto:contact@gomyor.com">contact@email.com</a></p>
+      <p>Phone: <a href="tel:+1234567890">+1-234-567-8910</a></p>
+      <!-- Social media links -->
+      <div class="social-icons">
+        <a href="#" target="_blank"><i class="fab fa-discord"></i>Discord</a>
+        <a href="#" target="_blank"><i class="fab fa-github"></i>Github</a>
+      </div>
+    </div>
+    <!-- Flip Image Section -->
+    <div class="flip-container footer-flip">
+      <div class="circle">
+        <img src="images/this-guy.jpg" alt="Avatar" class="front">
+        <img src="images/the-cats-logo.jpg" alt="Cats Logo" class="back">
+      </div>
+      <p class="flip-text">"Your road, your reality"</p>
+    </div>
+    <!-- Contact Form -->
+    <div class="footer-section contact-form">
+      <form id="contact-form" action="your-backend-url" method="POST">
+        <!-- Row for Name and Email Inputs -->
+        <div class="form-row">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required placeholder="Enter your name...">
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required placeholder="Enter your email...">
+          </div>
         </div>
-        <!-- Flip Image Section -->
-        <div class="flip-container footer-flip">
-            <div class="circle">
-                <img src="images/this-guy.jpg" alt="Avatar" class="front">
-                <img src="images/the-cats-logo.jpg" alt="Cats Logo" class="back">
-            </div>
-            <p class="flip-text">"Your road, your reality"</p>
+        <!-- Subject Input -->
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" placeholder="Enter the subject...">
         </div>
-        <!-- Contact Form -->
-        <div class="footer-section contact-form">
-            <form id="contact-form" action="your-backend-url" method="POST">
-                <!-- Row for Name and Email Inputs -->
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required placeholder="Enter your name...">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required placeholder="Enter your email...">
-                    </div>
-                </div>
-                <!-- Subject Input -->
-                <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" name="subject" placeholder="Enter the subject...">
-                </div>
-                <!-- Message Input -->
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <div class="textarea-container">
-                        <textarea id="message" name="message" required placeholder="Write your message..."></textarea>
-                        <!-- Submit Button -->
-                        <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
-                    </div>
-                </div>
-            </form>
+        <!-- Message Input -->
+        <div class="form-group">
+          <label for="message">Message</label>
+          <div class="textarea-container">
+            <textarea id="message" name="message" required placeholder="Write your message..."></textarea>
+            <!-- Submit Button -->
+            <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
+          </div>
         </div>
-    </footer>
-    <!-- Link to external JavaScript -->
-    <script src="myor/js/main.js"></script>
+      </form>
+    </div>
+  </footer>
+
 </body>
+
 </html>
