--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
   <div class="top-row">
     <button class="circle">D</button>
     <div class="bar"></div>
-    <div class="gap"></div>
-    <button class="oval">Home</button>
-    <button class="oval">About</button>
-    <button class="oval">Contact</button>
+    <div class="bar">
+      <div class="info-bar">
+        <span id="greeting">Today is your day.</span>
+        <span id="date-time"></span>
+        <span id="weather"></span>
+      </div>
+    </div>
+    <button i class="fas fa-home oval oval-home"> Home</button>
+    <button i class="fas fa-info-circle oval oval-about"> About</button>
+    <button i class="fas fa-envelope oval oval-contact"> Contact</button>
     <button class="oval">-</button>
     <button class="oval">-</button>
     <button class="square">-</button>
@@ -112,7 +118,7 @@
       <!-- Social media links -->
       <div class="social-icons">
         <a href="#" target="_blank"><i class="fab fa-discord"></i>Discord</a>
-        <a href="#" target="_blank"><i class="fab fa-github"></i>Github</a>
+        <a href="https://github.com/MYOR-Mitchell" target="_blank"><i class="fab fa-github"></i>Github</a>
       </div>
     </div>
     <!-- Flip Image Section -->
